Add send message endpoint
